Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -1029,7 +1029,6 @@ void WebPage::sendViewportAttributesChanged()
     int deviceHeight = (settings->deviceHeight() > 0) ? settings->deviceHeight() : m_viewportSize.height();
 
     ViewportAttributes attr = computeViewportAttributes(m_page->viewportArguments(), minimumLayoutFallbackWidth, deviceWidth, deviceHeight, m_page->deviceScaleFactor(), m_viewportSize);
-    attr.initialScale = m_page->viewportArguments().zoom; // Resets auto (-1) if no value was set by user.
 
     // Keep the current position, update size only.
     // For the new loads position is already reset to (0,0).
@@ -1037,11 +1036,20 @@ void WebPage::sendViewportAttributesChanged()
     IntPoint contentFixedOrigin = view->fixedVisibleContentRect().location();
 
     // Put the width and height to the viewport width and height. In css units however.
-    // FIXME: This should be in scaled units but this currently affects viewport attributes calculation.
     IntSize contentFixedSize = m_viewportSize;
+
     contentFixedSize.scale(1 / m_page->deviceScaleFactor());
 
+#if ENABLE(CSS_DEVICE_ADAPTATION)
+    // CSS viewport descriptors might be applied to already affected viewport size
+    // if the page enables/disables stylesheets, so need to keep initial viewport size.
+    view->setInitialViewportSize(contentFixedSize);
+#endif
+
+    contentFixedSize.scale(1 / attr.initialScale);
     setFixedVisibleContentRect(IntRect(contentFixedOrigin, contentFixedSize));
+
+    attr.initialScale = m_page->viewportArguments().zoom; // Resets auto (-1) if no value was set by user.
 
     // This also takes care of the relayout.
     setFixedLayoutSize(roundedIntSize(attr.layoutSize));
